# Vectis

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  NOTICES.md  README.md  codecov.yml  vcpkg.json
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
config/: vectis.example.toml
scripts/: README.md  build-agent-kit.sh  vectis-diff
scripts/hooks/: pre-push.sh
src/: main.cpp
src/cli/: cli_main.cpp  cli_main.h  guide.cpp  guide.h  mcp_server.cpp  mcp_server.h
src/code/: architecture_detector.cpp  architecture_detector.h  cmake_inspect.cpp  cmake_inspect.h  code_index.cpp  code_index.h  code_index_store.cpp  code_index_store.h  complexity_analyzer.cpp  complexity_analyzer.h  dependency.h  dependency_graph.cpp  dependency_graph.h  dependency_resolver.cpp  dependency_resolver.h  digest_exporter.cpp  digest_exporter.h  dotnet_project.cpp  dotnet_project.h  dotnet_project_handler.cpp  dotnet_project_handler.h  exclude_dirs.cpp  exclude_dirs.h  explain.cpp  explain.h  fidelity.cpp  fidelity.h  framework_hints.cpp  framework_hints.h  gitignore.cpp  gitignore.h  hotspot_detector.cpp  hotspot_detector.h  language.cpp  language.h  manifest_deps.cpp  manifest_deps.h  manifest_scanner.cpp  manifest_scanner.h  maven_pom.cpp  (+24 more)
src/core/: app.cpp  app.h  config_manager.cpp  config_manager.h  context_bus.cpp  context_bus.h  hash.h  log.cpp  log.h  mode.h  result.h  service_registry.cpp  service_registry.h  string_util.h  task_queue.cpp  task_queue.h  version.h.in
src/modes/ask/: ask_mode.cpp  ask_mode.h  context_builder.cpp  context_builder.h  conversation.h  conversation_store.cpp  conversation_store.h  (+5 more)
src/platform/: file_dialog.cpp  file_dialog.h  file_io.cpp  file_io.h  file_watcher.cpp  file_watcher.h  http_client.cpp  http_client.h  process.cpp  process.h
src/ui/: theme.cpp  theme.h  widgets.cpp  widgets.h
tests/: CMakeLists.txt
tests/cli/: agent_kit_skill_test.cpp  cli_cache_test.cpp  cli_commands_test.cpp  mcp_server_test.cpp
tests/code/: architecture_detector_test.cpp  cmake_inspect_test.cpp  code_index_store_test.cpp  code_index_test.cpp  complexity_analyzer_test.cpp  dependency_graph_test.cpp  dependency_resolver_test.cpp  digest_exporter_test.cpp  dotnet_project_test.cpp  explain_test.cpp  fidelity_test.cpp  fixtures_test.cpp  framework_hints_test.cpp  gitignore_test.cpp  hotspot_detector_test.cpp  language_test.cpp  manifest_deps_test.cpp  manifest_scanner_test.cpp  maven_pom_handler_test.cpp  maven_pom_test.cpp  pagerank_test.cpp  parser_test.cpp  properties_handler_test.cpp  properties_reader_test.cpp  scanner_test.cpp  spring_xml_handler_test.cpp  spring_xml_test.cpp  symbol_test.cpp  xml_reader_test.cpp
tests/core/: config_manager_test.cpp  context_bus_test.cpp  hash_test.cpp  task_queue_test.cpp
tests/fixtures/code/: README.md
tests/fixtures/code/mixed/backend/: server.py
tests/fixtures/code/mixed/frontend/: app.ts
tests/fixtures/code/mixed/migrations/: 001_initial.sql
tests/fixtures/code/mixed/worker/: Processor.java
tests/fixtures/code/sample-c/: main.c
tests/fixtures/code/sample-cpp/include/: widget.hpp
tests/fixtures/code/sample-cpp/src/: main.cpp  widget.cpp
tests/fixtures/code/sample-csharp/: Program.cs
tests/fixtures/code/sample-csharp/Models/: User.cs
tests/fixtures/code/sample-csharp/Services/: UserService.cs
tests/fixtures/code/sample-dotnet-cpm/: Solution.sln
tests/fixtures/code/sample-dotnet-cpm/App/: App.csproj  Program.cs
tests/fixtures/code/sample-dotnet-cpm/Lib/: Lib.cs
tests/fixtures/code/sample-dotnet-flags-false/: PlainLib.csproj
tests/fixtures/code/sample-dotnet-flags-titlecase/: TitleCaseApp.csproj
tests/fixtures/code/sample-dotnet-winui-slnx/: App.slnx
tests/fixtures/code/sample-dotnet-winui-slnx/src/App/: App.csproj
tests/fixtures/code/sample-go/: main.go
tests/fixtures/code/sample-go/user/: user.go
tests/fixtures/code/sample-java/: Main.java  User.java
tests/fixtures/code/sample-javascript/: index.js
tests/fixtures/code/sample-maven-multimodule/: pom.xml
tests/fixtures/code/sample-maven-multimodule/app/: pom.xml
tests/fixtures/code/sample-maven-multimodule/app/src/main/java/com/example/: App.java
tests/fixtures/code/sample-maven-multimodule/lib/: pom.xml
tests/fixtures/code/sample-maven-multimodule/lib/src/main/java/com/example/: Greeter.java
tests/fixtures/code/sample-php/: index.php
tests/fixtures/code/sample-php/src/: UserService.php
tests/fixtures/code/sample-properties/: Messages_en.properties  application.properties  audit-extra.properties  audit.properties  secrets.properties  weird.properties
tests/fixtures/code/sample-python/: main.py
tests/fixtures/code/sample-python/models/: user.py
tests/fixtures/code/sample-python/utils/: helpers.py
tests/fixtures/code/sample-ruby/: main.rb
tests/fixtures/code/sample-ruby/lib/: greeter.rb
tests/fixtures/code/sample-rust/src/: lib.rs  main.rs
tests/fixtures/code/sample-spring-xml/: applicationContext.xml  inner-ctx.xml
tests/fixtures/code/sample-spring-xml/src/main/java/com/example/svc/: MyService.java
tests/fixtures/code/sample-sql/: procedures.sql  schema.sql
tests/fixtures/code/sample-typescript/src/: index.ts  types.ts
tests/fixtures/code/sample-typescript/src/services/: user-service.ts
tests/modes/ask/: ask_mode_test.cpp  context_builder_test.cpp  conversation_store_test.cpp  question_classifier_test.cpp  web_search_test.cpp
tests/modes/code/: architecture_detector_test.cpp  code_index_store_test.cpp  code_index_test.cpp  complexity_analyzer_test.cpp  dependency_graph_test.cpp  dependency_resolver_test.cpp  digest_exporter_test.cpp  fixtures_test.cpp  gitignore_test.cpp  hotspot_detector_test.cpp  language_test.cpp  parser_test.cpp  scanner_test.cpp
tests/platform/: file_io_test.cpp  file_watcher_test.cpp  http_client_test.cpp
tests/services/: ai_engine_test.cpp  claude_api_test.cpp  gemini_api_test.cpp  index_engine_test.cpp  ollama_backend_test.cpp  openai_api_test.cpp  storage_engine_test.cpp  token_budget_test.cpp
(+55 files in other folders)
